# pentago

./: README.md  elixir_buildpack.config  mix.exs  phoenix_static_buildpack.config
apps/pentago/: .gitignore  Makefile  README.md  mix.exs
apps/pentago/lib/pentago/: ai_player.ex  application.ex  board.ex  game.ex  game_server.ex  game_supervisor.ex  move.ex
apps/pentago/lib/pentago/algorithm/: mini_max.ex  random.ex
apps/pentago/lib/pentago/evaluator/: draw.ex  in_vector.ex  win.ex
apps/pentago/lib/pentago/game/: bit_board.ex  board.ex  fast_board.ex  game.ex
apps/pentago/src/: CMakeLists.txt  algorithm.c  algorithm.h  board.c  board.h  evaluation.c  evaluation.h  nifs.c  nifs.h
apps/pentago/test/pentago/: board_test.exs
apps/pentago/test/pentago/evaluator/: draw_test.exs  in_vector_test.exs  win_test.exs
apps/pentago/test/pentago/game/: bit_board_text.exs  board_test.exs  fast_board_test.exs
apps/pentago_web/: README.md  mix.exs
apps/pentago_web/assets/: brunch-config.js  package.json
apps/pentago_web/assets/css/: app.css
apps/pentago_web/assets/js/: app.js  consts.js  game.js
apps/pentago_web/config/: config.exs  dev.exs  prod.exs  test.exs
apps/pentago_web/lib/: pentago_web.ex
apps/pentago_web/lib/pentago_web/: application.ex  endpoint.ex  gettext.ex  router.ex
apps/pentago_web/test/controllers/: page_controller_test.exs
apps/pentago_web/test/support/: channel_case.ex  conn_case.ex
apps/pentago_web/test/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
config/: releases.exs
(+18 files in other folders)
